<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/classes_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/session_recycler_view"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginTop="91dp"

        android:layout_marginBottom="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/selection_session_view"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:text="Select Previous Session"
        android:textAlignment="center"
        android:textColor="@color/seafoam"
        android:textSize="24dp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/or"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="560dp"
        android:text="OR"
        android:textAlignment="center"
        android:textColor="@color/dark_seafoam"
        android:textSize="32dp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_new_session_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="620dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:onClick="onStartPopupCreateNewSessionClicked"
        android:shadowColor="@color/white"
        android:text="Create New Session"
        android:textColor="@color/seafoam"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>