<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/matches_view"
        android:layout_width="380dp"
        android:layout_height="575dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nearby_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:onClick="onNearbyClicked"
        android:shadowColor="@color/white"
        android:text="@string/nearby_button"
        android:textColor="@color/seafoam"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:onClick="onStartClicked"
        android:shadowColor="@color/white"
        android:text="@string/start"
        android:textColor="@color/seafoam"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stop_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:onClick="onStopClicked"
        android:shadowColor="@color/white"
        android:text="@string/stop"
        android:textColor="@color/seafoam"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_view"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginBottom="585dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="@color/seafoam"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <EditText
        android:id="@+id/session_name_edit_text"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:imeOptions="actionDone"
        android:inputType="textCapCharacters"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/dark_seafoam"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/sort_filter_spinner"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/session_name_view"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onSessionLabelClicked"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/dark_seafoam"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>